InGameActivity added it does a basic drawing, cannot save, fullscreen not 100%

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,16 @@
         completions."
     </string>
 
+    <!-- STRINGS FOR THE InGameActivity -->
+    <string name="start_new">New</string>
+    <string name="brush">Brush</string>
+    <string name="erase">Erase</string>
+    <string name="save">Save</string>
+    <string name="paint">Paint</string>
+    <string name="color">Color</string>
+
+    <string name="xsml">Xsmall</string>
+    <string name="sml">Small</string>
+    <string name="med">Medium</string>
+    <string name="lrg">Large</string>
 </resources>
